# OrderService

./: alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
app/: config.yaml
app/application/: container.py  create_order.py  exceptions.py  get_order.py  process_callback.py  process_inbox_events.py  process_kafka_consumer.py  process_notifications.py  process_outbox_events.py
app/application/dto/: inbox.py  notification.py  notification_client.py  order.py  outbox.py  payment.py  payment_client.py
app/application/interfaces/: catalog_client.py  kafka_consumer.py  kafka_producer.py  notification_client.py  payments.py  uow.py
app/application/interfaces/repos/: inbox_repo.py  notification_repo.py  order_repo.py  outbox_repo.py  payment_repo.py
app/core/: models.py
app/infrastructure/: async_retry.py  base_client.py  catalog_service_client.py  container.py  db_schema.py  exceptions.py  kafka_consumer.py  kafka_producer.py  notification_client.py  payments_service_client.py  repositories.py  unit_of_work.py
app/infrastructure/repos/: inbox_repo.py  notification_repo.py  order_repo.py  outbox_repo.py  payment_repo.py  repositories.py
app/presentation/: api.py  container.py  inbox_worker.py  kafka_consumer_worker.py  notification_worker.py  outbox_worker.py
migration/: env.py
migration/versions/: 350c14409215_added_inbox_table.py  8bc5b018320a_initial.py  916be586ec27_added_notification_table.py  d6a4cebc1bbc_added_payments_table.py  d9d2c7cff26f_changed_type_of_idempotency_key.py  f49599da4022_added_outbox_table.py
